kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    service: frontend
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
